fluxcd/apps/base/http/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http
  template:
    metadata:
      labels:
        app: http
    spec:
      containers:
        - name: http
          image: timotheeren/http:latest
          ports:
            - containerPort: 3000
