fluxcd/apps/base/http/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: http
  ports:
    - port: 3000
      targetPort: 3000
