fluxcd/apps/base/http/http-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http
  namespace: default
spec:
  parentRefs:
    - name: envoy-gateway
  rules:
    - backendRefs:
        - kind: Service
          name: http
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /api
